# cctalk

./: .gitignore  CMakeLists.txt  readme.md
cmake/: test.cmake
include/: cctalk.hpp
include/cctalk/: bus.hpp  coin.hpp  coinAcceptor.hpp
src/: CMakeLists.txt  bus.cpp  coin.cpp  coinAcceptor.cpp
src/bus/: CMakeLists.txt  reader.cpp  reader.hpp
src/py/: CMakeLists.txt  bus.cpp
test/: CMakeLists.txt  test.cpp
test/coin/: CMakeLists.txt  coin.cpp  currency.cpp  revision.cpp  value.cpp
